--- a/index_folder/services.html
+++ b/index_folder/services.html
@@ -3,24 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="Assets/Resume.css">
-    <title>My Resume</title>
+    <title>Document</title>
 </head>
 <body>
     <header id="navigation_menu">
-            <table>
-                <tr>
+        <table>
+            <tr>
                 <td><button class="header_button"><a href="C:\Users\vahro\Documents\Github\Official_Resume\My-Resume\index.html">Home</a></button></td>
                 <td><button class="header_button"><a href="C:\Users\vahro\Documents\Github\Official_Resume\My-Resume\index_folder\services.html">Services</a></button></td>
                 <td><button class="header_button"><a href="C:\Users\vahro\Documents\Github\Official_Resume\My-Resume\index_folder\projects.html">Projects</a></button></td>
                 <td><button class="header_button"><a href="C:\Users\vahro\Documents\Github\Official_Resume\My-Resume\index_folder\contacts.html">Contacts</a></button></td>
-                </tr>
-            </table>
+            </tr>
+        </table>
     </header>
-
-    <div id="contents">
-        <img src="Res/me_nobg.png" alt="My Picture" id="my_image">
-    </div>
-    
+    <h1>Services Page is Under Construction</h1>
 </body>
 </html>
